--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>frontend</title>
+    <title>PanGlo'TSE</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </head>
   <body>
     <div id="app"></div>
